--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "classroom-front",
   "version": "0.0.0",
+  "main": "src/assets/js/app.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,7 +19,17 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@types/express": "^4.17.12",
+    "@types/socket.io": "^2.1.13",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "ng2-stomp-service": "^1.2.2",
     "rxjs": "~6.6.0",
+    "socket.io": "^2.3.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -27,13 +38,21 @@
     "@angular/cli": "~12.0.4",
     "@angular/compiler-cli": "~12.0.4",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
+    "cors": "^2.8.5",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.12.2",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "socket.io-client": "^2.4.0",
     "typescript": "~4.2.3"
   }
 }
